asha first commit

--- a/ResourceManagementREST/bin/src/main/resources/application.properties
+++ b/ResourceManagementREST/bin/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8083
 spring.datasource.url = jdbc:mysql://localhost:3306/crm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = asha
+spring.datasource.password = root
 
 #jpa hybernate
 spring.jpa.show-sql = true
