nimex first commit

--- a/ResourceManagementREST/src/main/resources/application.properties
+++ b/ResourceManagementREST/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 ##Tomcat server port number
 server.port=8083
 
+#secret key
+jwt.secret=faith
 
 # db config
 spring.datasource.url = jdbc:mysql://localhost:3306/crm
