--- a/ResourceManagementREST/pom.xml
+++ b/ResourceManagementREST/pom.xml
@@ -39,10 +39,11 @@
 		</dependency>
 		<!-- jstl dependency -->
 		<dependency>
-			<groupId>javaxServlet</groupId>
+			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
