--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/sassets/image"
+              
             ],
             "styles": [
               "src/styles.scss",        
