--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "multer": "^1.4.2",
     "ng2-charts": "^2.3.0",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.0",
