--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resourcemanagement",
+  "name": "resource-enquiry",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,34 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.6",
-    "@angular/common": "~9.0.6",
-    "@angular/compiler": "~9.0.6",
-    "@angular/core": "~9.0.6",
-    "@angular/forms": "~9.0.6",
-    "@angular/platform-browser": "~9.0.6",
-    "@angular/platform-browser-dynamic": "~9.0.6",
-    "@angular/router": "~9.0.6",
-    "bootstrap": "^4.4.1",
+    "@angular/animation": "^4.0.0-beta.8",
+    "@angular/animations": "^9.0.7",
+    "@angular/common": "~9.0.7",
+    "@angular/compiler": "~9.0.7",
+    "@angular/core": "~9.0.7",
+    "@angular/forms": "~9.0.7",
+    "@angular/platform-browser": "~9.0.7",
+    "@angular/platform-browser-dynamic": "~9.0.7",
+    "@angular/router": "~9.0.7",
     "chart.js": "^2.9.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jquery": "^3.4.1",
-    "multer": "^1.4.2",
     "ng2-charts": "^2.3.0",
     "ngx-pagination": "^5.0.0",
-    "ngx-toastr": "^12.0.0",
-    "nodemailer": "^6.4.6",
+    "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "validators": "^0.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.6",
-    "@angular/cli": "~9.0.6",
-    "@angular/compiler-cli": "~9.0.6",
-    "@angular/language-service": "~9.0.6",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular/cli": "~9.0.7",
+    "@angular/compiler-cli": "~9.0.7",
+    "@angular/language-service": "~9.0.7",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
