--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resource-enquiry",
+  "name": "resource",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,8 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animation": "^4.0.0-beta.8",
-    "@angular/animations": "^9.0.7",
+    "@angular/animations": "~9.0.7",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
@@ -20,13 +19,20 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "fusioncharts": "^3.15.1-sr.1",
+    "jquery": "^3.4.1",
     "ng2-charts": "^2.3.0",
     "ngx-pagination": "^5.0.0",
-    "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^12.0.1",
+    "nodemailer": "^6.4.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "validators": "^0.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
